add xml comments

--- a/FriGo/FriGo.Api/Properties/Resources.resx
+++ b/FriGo/FriGo.Api/Properties/Resources.resx
@@ -120,4 +120,7 @@
   <data name="AppName" xml:space="preserve">
     <value>FriGo</value>
   </data>
+  <data name="XmlCommentsPath" xml:space="preserve">
+    <value>{0}\bin\FriGo.Api.XML</value>
+  </data>
 </root>
