--- a/FriGo/FriGo.Db/Properties/Resources.resx
+++ b/FriGo/FriGo.Db/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConfirmPasswordValidationMessage" xml:space="preserve">
+    <value>The new password and confirmation password do not match.</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="IngredientList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SeedLists\IngredientList.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -126,6 +129,9 @@
   </data>
   <data name="IngredientQuantityValidationMessage" xml:space="preserve">
     <value>Ilość musi być liczbą dodatnią.</value>
+  </data>
+  <data name="PasswordLengthValidationMessage" xml:space="preserve">
+    <value>The password must be at least {0} characters long.</value>
   </data>
   <data name="UnitList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SeedLists\UnitList.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
