Add token endpoint summary

--- a/FriGo/FriGo.Api/Properties/Resources.resx
+++ b/FriGo/FriGo.Api/Properties/Resources.resx
@@ -144,6 +144,9 @@
   <data name="PasswordParameterName" xml:space="preserve">
     <value>password</value>
   </data>
+  <data name="TokenEndpointDescription" xml:space="preserve">
+    <value>Get authorization token (bearer)</value>
+  </data>
   <data name="TokenGetString" xml:space="preserve">
     <value>Token granted</value>
   </data>
